--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -53,17 +53,19 @@
 </div>
 
 <div id="desNav">
-    <!-- LOGO -->
-    <div class="logo" id="logo" onclick="window.location.href='/'">
-        <!-- <img class="logo1" src="{% static '/images/logo/logo-white.png' %}" alt="logo1">
+    <div id="desNavContent">
+        <!-- LOGO -->
+        <div class="logo" id="logo" onclick="window.location.href='/'">
+            <!-- <img class="logo1" src="{% static '/images/logo/logo-white.png' %}" alt="logo1">
         <img class="logo2" src="{% static '/images/logo/logo-black.png' %}" alt="logo2"> -->
         <h1>Lillehammer <span>Tjenester</span></h1>
     </div>
     <!-- MENU -->
     <div class="menu">
-        <a href="">Om oss</a>
-        <a href="">Alle tjenester</a>
-        <a href="">Kundeservice</a>
-        <a class="nav_order_btn" href="">For bedrifter</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/blogg/">Blogg</a>
+        <a href="/alle-tjenester/">Alle tjenester</a>
+        <a class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
     </div>    
+</div>
 </div>
