--- a/apps/core/templates/pages/business/be-partner.html
+++ b/apps/core/templates/pages/business/be-partner.html
@@ -39,7 +39,7 @@
                     <input type="email" name="email" id="email" placeholder="perhansen@hansen.no">
                     <br>
                     <br>
-                    <button id="partnerSub" type="submit">Send skjema</button>
+                    <button id="partnerSub" type="submit">Bli partner</button>
                 </form>
             </div>
         </div>
