--- a/static/scss/page/business.scss
+++ b/static/scss/page/business.scss
@@ -129,6 +129,25 @@ $txt: #183b56;
                         opacity: 0.66;
                     }
                 }
+                textarea{
+                    margin-bottom: -7px;
+                    width: 100%;
+                    min-height: 105px;
+                    max-height: 290px;
+                    border: 0;
+                    outline: 0;
+                    border-radius: 4px;
+                    padding: 10px;
+                    color: $txt;
+                    font-size: 14px;
+                    opacity: 0.95;
+                    border: 1px solid rgba(100,100,100,0.1);
+                    &::placeholder{
+                        color: $txt;
+                        font-size: 14px;
+                        opacity: 0.66;
+                    }
+                }
                 button{
                     width: 100%;
                     background: $primBtn;
