--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -17,6 +17,8 @@
 <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
 <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
 
+<!-- <div class="donation">Ønsker du å donere? Klikk her</div> -->
+
 <!-- Cover -->
 <div class="cover">
    <div class="width">
@@ -40,7 +42,7 @@
 </div>
 
 <!-- Services -->
-<div class="services">
+<div class="services section">
    <div class="content">
       <div class="text">
          <p class="headingp">Endres hver onsdag</p>
@@ -67,7 +69,7 @@
 </div>
 
 <!-- Categories -->
-<div class="categories">
+<div class="categories section">
    <div class="content">
       <div class="text">
          <p class="headingp">Kategorier</p>
@@ -88,7 +90,7 @@
 </div>
 
 <!-- Map -->
-<div class="map">
+<div class="map section">
    <div class="content">
       <div class="text">
          <p class="headingp">Kart</p>
