--- a/apps/core/templates/pages/business/business.html
+++ b/apps/core/templates/pages/business/business.html
@@ -30,7 +30,7 @@
                 <h1>Bedriftsbruker</h1>
                 <div class="alert">
                     <div class="alert-one">Kommer snart</div>
-                    <div class="alert-two">Bedrift bruker er i utvikling</div>
+                    <div class="alert-two">Bedriftsbruker er i utvikling</div>
                 </div>
             </div>
 
