--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -11,8 +11,12 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: rgb(248, 248, 248) !important;
-  max-width: 1350px;
   margin: auto;
+}
+
+.section, .page {
+  max-width: 1350px;
+  margin-inline: auto;
 }
 
 button {
@@ -48,7 +52,7 @@ button:hover {
 
 h1.section-heading {
   color: #183b56;
-  font-size: 24px;
+  font-size: 23px;
 }
 
 p {
