--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -3,21 +3,19 @@ $white: rgb(246,246,246);
 $primBtn: #06c484;
 $txt: #183b56;
 
-#footer{
-  border-top: 1px solid rgba(0,0,0,0.1);
-}
-#mobileNav{
+
+.donation{
   position: absolute;
-  background: white;
-  &::before{
-      display: none;
-  }
-  &.sticky{
-      position: fixed;
-      &::before{
-          display: none;
-      }
-  }
+  top: 0;
+  width: 100%;
+  height: 30px;
+  background: $primBtn;
+  color: $white;
+  z-index: 100000000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
 }
 
 // Cover
@@ -37,7 +35,7 @@ $txt: #183b56;
   }
   .content{
     padding-inline: 25px;
-    padding-top: 127px;
+    padding-top: 120px;
     padding-bottom: 55px;
     height: max-content;
     opacity: 0;
@@ -51,9 +49,9 @@ $txt: #183b56;
       text-align: center;
       .cover-heading{
         color: $white;
-        font-size: 26px;
+        font-size: 25px;
         margin-bottom: 15px;
-        font-weight: 600;
+        font-weight: 700;
       }
       .paragraph{
         margin-top: 0;
@@ -66,6 +64,7 @@ $txt: #183b56;
       margin-top: 27px;
       padding: 25px 15px;
       background: rgba(195, 195, 195, 0.19);
+      border-radius: 1px;
       i{
         position: absolute;
         font-size: 15px;
@@ -309,7 +308,7 @@ $txt: #183b56;
   }
 }
 
-// // SMALL DESKTOP
+// Breakpoint 1
 @media only screen and (min-device-width: 1140px) {
   // Cover
   .cover{
@@ -317,12 +316,14 @@ $txt: #183b56;
       filter: brightness(35%);
     }
     .content{
-      padding-top: 125px;
-      padding-bottom: 70px;
+      padding-top: 145px;
+      padding-bottom: 90px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding-inline: 105px;
+      max-width: 1350px;
+      margin: auto;
       .text{
         text-align: left;
         width: 450px;
@@ -332,7 +333,8 @@ $txt: #183b56;
       .cover-search{
         position: relative;
         padding: 25px 15px;
-        background: rgba(185, 185, 185, 0.15);
+        background: rgba(195, 195, 195, 0.19);
+        border-radius: 1px;
         max-width: 460px;
         top: -12px;
         i{
@@ -356,10 +358,6 @@ $txt: #183b56;
           color: $txt;
           border-radius: 4px;
           font-size: 15px;
-          &:hover{
-            filter: brightness(92%);
-            cursor: pointer;
-          }
           &:active, &:focus{
             filter: brightness(100%);
             cursor: text;
@@ -406,7 +404,7 @@ $txt: #183b56;
         &::-webkit-scrollbar{
             height: 7px;
             display: block;
-            background: rgba(130, 130, 130, 0.1);
+            background: rgba(130, 130, 130, 0.05);
             cursor: pointer !important;
           }
           &::-webkit-scrollbar-thumb{
@@ -559,17 +557,283 @@ $txt: #183b56;
   }
   // Map
   .map{
-    padding-top: 5px;
+    padding-top: 15px;
     width: 80%;
     height: auto;
     margin: auto;
     .content{
       padding: 0 18px;
+      padding-top: 15px;
+      padding-bottom: 20px;
+      .text{
+        text-align: center;
+      }
+      #map{}
+    }
+  }
+}
+
+// Breakpoint 2
+@media only screen and (min-device-width: 1600px) {
+  // Cover
+  .cover{
+    .cover-img-lillehammer{
+      filter: brightness(35%);
+    }
+    .content{
+      padding-top: 195px;
+      padding-bottom: 150px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-inline: 165px;
+      max-width: 1350px;
+      margin: auto;
+      .text{
+        text-align: left;
+        width: 450px;
+        .cover-heading{
+        }
+      }
+      .cover-search{
+        position: relative;
+        padding: 25px 15px;
+        background: rgba(195, 195, 195, 0.19);
+        border-radius: 1px;
+        max-width: 460px;
+        top: -12px;
+        i{
+          position: absolute;
+          font-size: 15px;
+          color: #183b56a9;
+          right: 35px;
+          top: 43px;
+          padding: 7px;
+          margin: -7px;
+          background: rgba(155, 155, 155, 0.22);
+          border-radius: 100%;
+        }
+        input{
+          width: 100%;
+          height: 50px;
+          border: none;
+          outline: none;
+          padding: 7px 17px;
+          background: $white;
+          color: $txt;
+          border-radius: 4px;
+          font-size: 15px;
+          &:active, &:focus{
+            filter: brightness(100%);
+            cursor: text;
+          }
+          &::placeholder{
+            color: $txt;
+            opacity: 0.8;
+          }
+        }
+        button{
+          font-size: 14.5px;
+          background: $primBtn;
+          color: $white;
+          text-align: center;
+          width: 100%;
+          height: 45px;
+          margin-top: 15px;
+          border-radius: 4px;
+          outline: none;
+          border: none;
+          font-weight: normal;
+        }
+      }
+    }
+  }
+  // Services
+  .services{
+    width: 100%;
+    height: auto;
+    .content{
+      padding: 35px 15px;
+      padding-bottom: 52px;
+      .text{
+        text-align: center;
+      }
+      .services-cards{
+        z-index: 100;
+        margin-top: 10px;
+        display: flex;
+        overflow-x: scroll;
+        padding-top: 25px;
+        padding-bottom: 45px;
+        padding-inline: 20px;
+        &::-webkit-scrollbar{
+            height: 7px;
+            display: block;
+            background: rgba(130, 130, 130, 0.05);
+            cursor: pointer !important;
+          }
+          &::-webkit-scrollbar-thumb{
+            border-radius: 10px;
+            background-color: rgba(130, 130, 130, 0.25);
+            cursor: pointer !important;
+        }
+        .service{
+          min-width: 220px;
+          max-width: 220px;
+          height: min-content;
+          margin: 0 30px;
+          position: relative;
+          transition: .1s;
+          cursor: pointer;
+          border-radius: 4px;
+          padding: 10px;
+          .service-image{
+            width: 100%;
+            height: 105px;
+            object-fit: cover;
+            filter: brightness(90%);
+            border-radius: 4px
+          }
+          .reviews{
+            display: flex;
+            margin-block: 3px;
+            p{
+              margin-bottom: 0;
+              color: #FFBC55;
+              font-size: 12px;
+              margin-top: 1px;
+              i{
+                transform: translateY(-0.9px);
+                margin-right: 3px;
+                font-size: 11px;
+              }
+            }
+            span{
+              color: rgb(170, 170, 170);
+              font-size: 11px;
+              transform: translateX(4px) translateY(2px);
+            }
+          }
+          .name{
+            font-size: 18px;
+            color: $txt;
+            margin-bottom: 2px;
+          }
+          .business-name{
+            font-size: 13px;
+            color: $txt;
+            opacity: 0.7;
+          }
+          .short-des{
+            margin-top: 8px;
+            color: $txt;
+            font-size: 15px;
+            opacity: 0.9;
+          }
+          &:first-child{
+            margin-left: 0;
+          }
+          &:hover{
+            background: white;
+            .name{
+              text-decoration: underline;
+            }
+            .service-image{
+              transition: .2s;
+              filter: brightness(85%);
+            }
+          }
+        }
+      }
+    }
+  }
+  // Categories
+  .categories{
+    width: 100%;
+    height: auto;
+    .content{
+      padding: 0 25px;
       padding-top: 5px;
       padding-bottom: 20px;
       .text{
         text-align: center;
       }
+    }
+    .cat-cards{
+      padding-block: 5px;
+      margin-top: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      .cat{
+        width: 100%;
+        max-width: 380px;
+        min-width: 320px;
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 20px;
+        padding: 14px;
+        background: white;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: .2s;
+        border: 1px solid rgba(200,200,200,0.1);
+        &:first-child{
+          margin-top: 10px;
+        }
+        &:last-child{
+          margin-bottom: 10px;
+        }
+        .icon{
+          width: 17%;
+          transform: translateX(4px) translateY(4px);
+          i{
+            font-size: 20px;
+            color: $txt;
+            border-radius: 100%;
+            color: $primBtn;
+          }
+        }
+        .text{
+          text-align: left;
+          width: 84%;
+          h1{
+            margin-top: 0;
+            margin-bottom: 4px;
+            font-size: 18px;
+            color: $txt;
+          }
+          p{
+            color: $txt;
+            font-size: 13px;
+            opacity: 0.9;
+          }
+        }
+        &:hover{
+          transform: scale(1.05);
+          filter: brightness(95%);
+        }
+        &:focus, &:active{
+          transform: scale(1.08);
+          filter: brightness(93%);
+        }
+      }
+    }
+  }
+  // Map
+  .map{
+    padding-top: 15px;
+    width: 80%;
+    height: auto;
+    margin: auto;
+    .content{
+      padding: 0 18px;
+      padding-top: 15px;
+      padding-bottom: 20px;
+      .text{
+        text-align: center;
+      }
+      #map{}
     }
   }
 }
