--- a/apps/core/templates/pages/business/make-serv.html
+++ b/apps/core/templates/pages/business/make-serv.html
@@ -90,7 +90,7 @@
                     </div>
 
                     <div id="stepThree">
-                        <p style="margin-top: -11px;">Skriv inn åpningstider. Om dere er stengt, skriv "Stengt"</p>
+                        <p style="margin-top: -11px;">Skriv inn åpningstider. Om dere er stengt, skriv "Stengt". Hvis tjenestene deres er online, kan dere skrive "Online", også tidspunkter.</p>
                         <label for="mandag">Mandag</label>
                         <br>
                         <input type="text" name="mandag" id="mandag" placeholder="Eks: 09-20">
@@ -133,7 +133,7 @@
                     </div>
 
                     <div id="stepFour">
-                        <p style="margin-top: -11px;">Hvordan skal kunden kontakte dere?</p>
+                        <p style="margin-top: -11px;">Hvordan skal kunden kontakte dere? Vi krever kunn en av de måtene under, men anbefaller å fylle inn alle.</p>
                         <label for="contact_by_website">Nettside</label>
                         <br>
                         <input type="text" name="contact_by_website" id="contact_by_website" placeholder="Eks: lillehammertjenester.no">
