--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -13,6 +13,10 @@ html, body {
   margin: auto;
 }
 
+body {
+  background: rgb(248, 248, 248) !important;
+}
+
 .section, .page {
   max-width: 1350px;
   margin-inline: auto;
