--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -11,10 +11,7 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   margin: auto;
-}
-
-body {
-  background: rgb(248, 248, 248) !important;
+  background: rgb(248, 248, 248);
 }
 
 .section, .page {
