--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -17,10 +17,9 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   margin: auto;
+  background:  rgb(248,248,248);
 }
-body{
-  background:  rgb(248,248,248) !important;
-}
+
 
 .section, .page{
   max-width: 1350px;
