--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -17,7 +17,7 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   margin: auto;
-  background:  rgb(248,248,248);
+  background:  rgb(248,248,248) !important;
 }
 
 
