--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -67,7 +67,7 @@
          <div class="text main">
              <div class="reviews">
               {% if product.get_rating %}
-              <p><i class="fa-solid fa-star"></i><p id="reviewsAvrg"></p></p><span>({{product.reviews.all.count}})</span>
+              <p><i class="fa-solid fa-star"></i>{{product.get_rating|floatformat:0}}</p><span>({{product.reviews.all.count}})</span>
               {% else %}
               <p><i class="fa-solid fa-star"></i>0</p><span>({{product.reviews.all.count}})</span>
               {% endif %}
@@ -259,16 +259,8 @@
         </div>
       </div>
 <script type="text/javascript">
-
-  let avrg = '{{product.get_rating|floatformat:0}}'
-  let text = document.getElementById('reviewsAvrg')
-
   async function getRating(){
-    avrg = parseInt(avrg) / parseInt('{{product.reviews.all.count}}')
 
-    text.innerHTML = Math.trunc(avrg)
-
-    // Visitors
     console.log('Antall visninger {{ num_visits }}')
   }
 
