--- a/apps/store/templates/core/category.html
+++ b/apps/store/templates/core/category.html
@@ -29,7 +29,7 @@
             <img src="{{product.image1.url}}" alt="" class="service-image">
             <div class="reviews">
                 {% if product.get_rating %}
-                <p><i class="fa-solid fa-star"></i><p id="reviewsAvrg"></p></p><span>({{product.reviews.all.count}})</span>
+                <p><i class="fa-solid fa-star"></i>{{product.get_rating|floatformat:0}}</p><span>({{product.reviews.all.count}})</span>
                 {% else %}
                 <p><i class="fa-solid fa-star"></i>0</p><span>(0)</span>
                 {% endif %}
@@ -40,19 +40,4 @@
         {% endfor %}
     </div>
 </div>
-
-{% for product in product %}
-<script type="text/javascript">
-
-   let avrg = '{{product.get_rating|floatformat:0}}'
-   let text = document.getElementById('reviewsAvrg')
-   
-   async function getRating(){
-      avrg = parseInt(avrg) / parseInt('{{product.reviews.all.count}}')
-      
-      text.innerHTML = Math.trunc(avrg)
-   }
-   getRating();
-</script>
-{% endfor %}
 {% endblock %}
